# Rust-Cipher-SecureComms

./: Cargo.toml  Readme.md  config.toml  docker-compose.yml  docs.md
.github/workflows/: workflow  workflow_docker  workflow_security
docker/: Dockerfile  config.toml  docs.md  entrypoint.sh
src/: lib.rs  logger.rs  main.rs  messages.rs
src/client/: auth.rs  config.rs  mod.rs
src/client/handlers/: message_handler.rs  mod.rs  secure_setup.rs  username.rs
src/client/types/: auth_message.rs  mod.rs
src/client/ui/: display.rs  format.rs  mod.rs
src/crypto/: key.rs  mod.rs  secure_channel.rs
src/security/: authentication.rs  ecdh.rs  mod.rs
src/server/: client_info.rs  commands.rs  handlers.rs  mod.rs  username.rs
src/storage/: key_manager.rs  mod.rs
src/util/: mod.rs  send_encrypted.rs
